Fixed Overflowing issue with columns

--- a/src/components/BoardsNav/_BoardsNav.scss
+++ b/src/components/BoardsNav/_BoardsNav.scss
@@ -26,6 +26,7 @@
       color: $primary;
       background: none;
       border: none;
+      white-space: nowrap;
     }
 
     svg > path {
