--- a/src/components/Column/_Column.scss
+++ b/src/components/Column/_Column.scss
@@ -3,6 +3,7 @@
 
 .column_container {
   min-width: 280px;
+  height: 100%;
 }
 
 .column_header {
