--- a/src/features/Header/_Header.scss
+++ b/src/features/Header/_Header.scss
@@ -10,6 +10,7 @@
 .header_container {
   padding: 20px 16px;
   display: flex;
+  max-width: 100%;
   align-items: center;
   justify-content: space-between;
   background-color: white;
@@ -42,6 +43,7 @@
   display: flex;
   align-items: center;
   gap: 16px;
+  cursor: pointer;
 
   .dimmed {
     cursor: default;
@@ -51,16 +53,16 @@
   button {
     display: flex;
     align-items: center;
-
+    gap: 4px;
     background-color: $primary;
     border-radius: 24px;
     padding: 10px 18px;
 
     border: none;
-  }
 
-  svg {
-    cursor: pointer;
+    span {
+      display: none;
+    }
   }
 }
 
@@ -90,6 +92,18 @@
     flex: 2;
     & svg:not(.header_logo) {
       display: none;
+    }
+  }
+
+  .header_right > button {
+    svg {
+      display: none;
+    }
+
+    span {
+      @include HeadingM;
+      display: block;
+      color: white;
     }
   }
 }
